# sten-precommit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
hooks/: _common.py  check_mockito.py  check_no_basic_config.py  check_no_private_import.py
tests/: test_check_mockito.py  test_check_no_basic_config.py  test_check_no_private_import.py  test_walker.py
