[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sten-precommit-hooks"
version = "0.1.1"
description = "Repo-agnostic pre-commit regex guards (mockito-only, no-basicConfig)."
readme = "README.md"
license = "MIT"
authors = [{ name = "Steven England" }]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/stevenengland/sten-precommit-hooks"
Issues = "https://github.com/stevenengland/sten-precommit-hooks/issues"

[tool.setuptools.packages.find]
include = ["hooks*"]
